--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,18 @@
                 </a>
             </div>
         </div>
-
     </header>
+    <section class="event">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, totam. Repellendus alias porro magnam recusandae dolor earum impedit aliquid provident? Suscipit nostrum voluptas consequuntur ratione minima. Rem maxime voluptatibus officia.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
     <script src="scripts/main.js"></script>
 </body>
 </html>
