--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, totam. Repellendus alias porro magnam recusandae dolor earum impedit aliquid provident? Suscipit nostrum voluptas consequuntur ratione minima. Rem maxime voluptatibus officia.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="Front-end">
         </div>
     </section>
     <section class="event event--data-science">
@@ -72,7 +72,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, totam. Repellendus alias porro magnam recusandae dolor earum impedit aliquid provident? Suscipit nostrum voluptas consequuntur ratione minima. Rem maxime voluptatibus officia.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Front-end">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -83,7 +83,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, totam. Repellendus alias porro magnam recusandae dolor earum impedit aliquid provident? Suscipit nostrum voluptas consequuntur ratione minima. Rem maxime voluptatibus officia.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Front-end">
         </div>
     </section>
 
